# spektrafilm

./: .gitignore  CITATION.cff  README.md  pyproject.toml  setup.py
agx_emulsion/gui/: main.py
agx_emulsion/model/: color_filters.py  density_curves.py  diffusion.py  illuminants.py  process.py  runtime_params.py  stocks.py
agx_emulsion/profiles/: correct.py  factory.py  fitting.py  io.py
agx_emulsion/utils/: io.py  spectral_upsampling.py  test_strips.py
archive/profile_creator/: plotting_experiments.py  (+1 more)
examples/: create_profile.py  inspect_profile_snapshots.py  midgray_balance.py  plot_negative_print_exposure_gray_ramp.py  run_simulation.py
proto/: fit_exponential_with_two_gaussians.py  plot_diffusion_filter_kernels.py  plot_exponential_gaussian_fits.py  plot_halation_preset_kernels.py  plot_scan_film_mtf.py
scripts/: compare_simulation_revisions.py  make_profiles.py  regenerate_neutral_print_filters.py  regenerate_printing_filters.py  regenerate_single_negative_paper_pair.py  regenerate_test_baselines.py  runtime_process_timing.py
tests/: conftest.py  regression_baselines.py  test_color_management.py  test_couplers.py  test_emulsion.py  test_exif_metadata.py  test_gui_controller.py  test_gui_layout.py  test_gui_params_mapper.py  test_gui_persistence.py  test_gui_state_bridge.py  test_image_io_color_metadata.py  test_lut.py  test_parametric.py  test_photo_params.py  test_pipeline_smoke.py  test_profiles.py  test_raw_file_processor.py  test_regression_baselines.py  test_runtime_api.py  test_runtime_services.py  test_spectral_upsampling.py
(+410 files in other folders)
