[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agx-emulsion"
version = "0.3.0"
description = "Simulation of analog film photography"
readme = "README.md"
requires-python = "~=3.13"
license = { text = "GPLv3" }
authors = [
    { name = "Andrea Volpato", email = "volpedellenevi@gmail.com" },
]
dependencies = [
    "numpy~=2.4",
    "matplotlib~=3.10",
    "scipy~=1.17",
    "colour-science~=0.4.6",
    "scikit-image~=0.26",
    "opt-einsum~=3.4.0",
    "napari~=0.6.6",
    "qtpy~=2.4",
    "lmfit~=1.3.2",
    "pyside6~=6.9",
    "Pillow~=12.1",
    "numba~=0.64",
    "OpenImageIO~=3.1.11",
    "pyfftw~=0.15.0",
]

[project.scripts]
agx-emulsion = "spectral_film_lab.gui.main:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["spectral_film_lab*", "profiles_creator*"]

[tool.setuptools.package-data]
spectral_film_lab = [
    "data/**/*",
]
profiles_creator = [
    "data/**/*",
]

